Add network optional parameter
