# src/routes/crypto.js
@@ -1,13 +1,19 @@
 import joi from 'joi';
 import { Router } from 'express';
-import { toHexString } from '../utils.js';
-import { symbolValidator, mnemonic, passphrase, getChainId } from '../cfg.js';
+import { mnemonic, passphrase } from '../cfg.js';
 import { getTransactionInfo, getWalletInfo } from '../crypto/crypto.js';
+import {
+  symbolValidator,
+  networkValidator,
+  getCoinType,
+  toHexString,
+} from '../utils.js';
 
 const router = Router();
 
 const hdwalletPostSchema = joi.object({
   symbol: joi.string().custom(symbolValidator).required(),
+  network: joi.string().custom(networkValidator),
   accountIndex: joi.number().min(0).default(0),
   externalChain: joi.number().min(0).default(0),
   addressIndex: joi.number().min(0).default(0),
@@ -22,12 +28,11 @@ router.post('/v1/hdwallet', async (req, res, next) => {
 
   /** @type {import('@trustwallet/wallet-core').WalletCore} */
   const { HDWallet, AnyAddress } = req.app.locals.core;
-  const { symbol, accountIndex, externalChain, addressIndex } = value;
+  const { symbol, network, accountIndex, externalChain, addressIndex } = value;
 
   try {
     const hdwallet = HDWallet.createWithMnemonic(mnemonic, passphrase);
-    const chainId = getChainId(symbol);
-    const coinType = { value: chainId };
+    const coinType = getCoinType(symbol, network, req.app.locals.core);
     const privateKey = hdwallet.getDerivedKey(
       coinType,
       accountIndex,
@@ -57,11 +62,15 @@ router.post('/v1/hdwallet', async (req, res, next) => {
 
 const getTransactionSchema = joi.object({
   symbol: joi.string().custom(symbolValidator).required(),
+  network: joi.string().custom(networkValidator),
   transactionId: joi.string().required(),
 });
 
 router.get('/v1/:symbol/transaction/:transactionId', async (req, res, next) => {
-  const { value, error } = getTransactionSchema.validate(req.params);
+  const { value, error } = getTransactionSchema.validate({
+    ...req.params,
+    ...req.query,
+  });
   if (error) {
     const errorMessages = error.details.map((detail) => detail.message);
     return res.status(400).json({ errors: errorMessages });
@@ -70,16 +79,15 @@ router.get('/v1/:symbol/transaction/:transactionId', async (req, res, next) => {
   /** @type {import('@trustwallet/wallet-core').WalletCore} */
   const core = req.app.locals.core;
   const { CoinTypeConfiguration } = core;
-  const { symbol, transactionId } = value;
+  const { symbol, network, transactionId } = value;
 
   try {
-    const chainId = getChainId(symbol);
-    const coinType = { value: chainId };
+    const coinType = getCoinType(symbol, network, req.app.locals.core);
     const url = CoinTypeConfiguration.getTransactionURL(
       coinType,
       transactionId,
     );
-    const info = await getTransactionInfo(symbol, transactionId);
+    const info = await getTransactionInfo(symbol, network, transactionId);
 
     const response = { ...info, url };
 
@@ -91,20 +99,24 @@ router.get('/v1/:symbol/transaction/:transactionId', async (req, res, next) => {
 
 const getWalletTransactionsSchema = joi.object({
   symbol: joi.string().custom(symbolValidator).required(),
+  network: joi.string().custom(networkValidator),
   walletId: joi.string().required(),
 });
 
 router.get('/v1/:symbol/wallet/:walletId', async (req, res, next) => {
-  const { value, error } = getWalletTransactionsSchema.validate(req.params);
+  const { value, error } = getWalletTransactionsSchema.validate({
+    ...req.params,
+    ...req.query,
+  });
   if (error) {
     const errorMessages = error.details.map((detail) => detail.message);
     return res.status(400).json({ errors: errorMessages });
   }
 
-  const { symbol, walletId } = value;
+  const { symbol, network, walletId } = value;
 
   try {
-    const response = await getWalletInfo(symbol, walletId);
+    const response = await getWalletInfo(symbol, network, walletId);
 
     res.json(response);
   } catch (error) {
